# NeuralNetworkSim

./: CMakeLists.txt
include/: DenseLayer.h  Model.h  NN.h  Neuron.h  Structs.h  Test.h
libs/: CMakeLists.txt
src/: main.cpp
src/objects/: DenseLayer.cpp  Model.cpp
